# lambdapdk

./: .flake8  .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
gf180/base/openroad/: gf180mcu_3LM_1TM_6K_7t_tech.lef  gf180mcu_3LM_1TM_9K_7t_tech.lef  gf180mcu_4LM_1TM_11K_7t_tech.lef  gf180mcu_4LM_1TM_30K_7t_tech.lef  gf180mcu_5LM_1TM_11K_7t_tech.lef
lambdapdk/: __init__.py  utils.py
lambdapdk/asap7/: README.md  __init__.py
lambdapdk/asap7/base/: README.md
lambdapdk/asap7/base/apr/: asap7_tech.lef  openroad_relaxed_rules.tcl
lambdapdk/asap7/base/setup/klayout/: asap7.lyp  asap7.lyt
lambdapdk/asap7/base/spice/hspice/: 7nm.lib
lambdapdk/asap7/libs/: asap7sc7p5t.py  fakeio7.py  fakekit7.py  fakepll7.py  fakeram7.py
lambdapdk/asap7/libs/asap7sc7p5t_lvt/lambda/: la_and2.v  la_and2.vg  la_and3.v  la_and3.vg  la_and4.v  la_and4.vg  la_ao21.v  la_ao21.vg  la_ao211.v  la_ao211.vg  la_ao22.v  la_ao22.vg  la_ao221.v  la_ao221.vg  la_ao222.v  la_ao222.vg  la_ao31.v  la_ao31.vg  la_ao311.v  la_ao311.vg  la_ao32.v  la_ao32.vg  la_ao33.v  la_ao33.vg  la_aoi21.v  la_aoi21.vg  la_aoi211.v  la_aoi211.vg  la_aoi22.v  la_aoi22.vg  la_aoi221.v  la_aoi221.vg  la_aoi222.v  la_aoi222.vg  la_aoi31.v  la_aoi31.vg  la_aoi311.v  la_aoi311.vg  la_aoi32.v  la_aoi32.vg  (+179 more)
lambdapdk/asap7/libs/asap7sc7p5t_lvt/netlist/: asap7sc7p5t_28_L.cdl  asap7sc7p5t_lvt.cdl
lambdapdk/asap7/libs/asap7sc7p5t_rvt/lambda/: la_and2.v  (+217 more)
lambdapdk/asap7/libs/asap7sc7p5t_slvt/: LICENSE
lambdapdk/asap7/libs/fakeio7/: __init__.py
lambdapdk/asap7/libs/fakeram7/: build.sh  fakeram7.cfg  pdngen.tcl
lambdapdk/freepdk45/: __init__.py
lambdapdk/freepdk45/base/: freepdk45.py
lambdapdk/freepdk45/libs/: fakeram45.py  nangate45.py
lambdapdk/freepdk45/libs/fakeram45/: build.sh  fakeram45.cfg  pdngen.tcl
lambdapdk/freepdk45/libs/nangate45/: nangate45.py
lambdapdk/gf180/: README.md  __init__.py
lambdapdk/gf180/base/apr/: gf180mcu_3LM_1TM_11K_7t_tech.lef  gf180mcu_3LM_1TM_11K_9t_tech.lef  gf180mcu_3LM_1TM_30K_7t_tech.lef  gf180mcu_3LM_1TM_30K_9t_tech.lef  gf180mcu_3LM_1TM_6K_7t_tech.lef  gf180mcu_3LM_1TM_6K_9t_tech.lef  gf180mcu_3LM_1TM_9K_7t_tech.lef  gf180mcu_3LM_1TM_9K_9t_tech.lef  gf180mcu_4LM_1TM_11K_7t_tech.lef  gf180mcu_4LM_1TM_11K_9t_tech.lef  gf180mcu_4LM_1TM_30K_7t_tech.lef  gf180mcu_4LM_1TM_30K_9t_tech.lef  gf180mcu_4LM_1TM_6K_7t_tech.lef  gf180mcu_4LM_1TM_6K_9t_tech.lef  gf180mcu_4LM_1TM_9K_7t_tech.lef  gf180mcu_4LM_1TM_9K_9t_tech.lef  gf180mcu_5LM_1TM_11K_7t_tech.lef  gf180mcu_5LM_1TM_11K_9t_tech.lef  gf180mcu_5LM_1TM_9K_7t_tech.lef  gf180mcu_5LM_1TM_9K_9t_tech.lef  gf180mcu_6LM_1TM_9K_9t_tech.lef
lambdapdk/gf180/base/openroad/: gf180mcu_2LM_1TM_30K_7t_tech.lef  gf180mcu_3LM_1TM_30K_7t_tech.lef  gf180mcu_5LM_1TM_9K_7t_tech.lef
lambdapdk/gf180/libs/: gf180io.py  gf180mcu.py  gf180sram.py
lambdapdk/gt2n/: README.md  __init__.py  target.py
lambdapdk/gt2n/libs/: stdcells.py
lambdapdk/icsprout55/: __init__.py
lambdapdk/icsprout55/libs/: ics55_stdcell.py
lambdapdk/ihp130/: __init__.py  ihp130.json
lambdapdk/ihp130/base/dfm/: fill.json
lambdapdk/ihp130/libs/: sg13g2_io.py  sg13g2_sram.py  sg13g2_stdcell.py
lambdapdk/ihp130/libs/sg13g2_sram/: pdngen.tcl
lambdapdk/interposer/: README.md  __init__.py  _generator.py
lambdapdk/interposer/base/apr/: 3ML_0400.layermap  3ML_0400.lef  3ML_0400_2000.layermap  3ML_0400_2000.lef  3ML_0800.lef  3ML_2000.lef  4ML_0400.lef  4ML_0400_2000.layermap  4ML_0400_2000.lef  4ML_0800.layermap  4ML_0800.lef  4ML_2000.lef  5ML_0400.layermap  5ML_0400.lef  5ML_0400_2000.layermap  5ML_0400_2000.lef  5ML_0800.layermap  5ML_0800.lef  5ML_2000.lef
lambdapdk/interposer/base/templates/: README.md.j2  drc.j2  layermap.j2  lef.j2  pex.tcl.j2
lambdapdk/interposer/libs/: bumps.py
lambdapdk/sky130/: README.md  __init__.py
lambdapdk/sky130/base/apr/: sky130_fd_sc_hdll.tlef
lambdapdk/sky130/libs/: sky130hd.py  sky130io.py  sky130sc.py  sky130sram.py
lambdapdk/sky130/libs/sky130sram/: pdngen.tcl
pdks/gf180/base/openroad/: gf180mcu_3LM_1TM_11K_7t_tech.lef  gf180mcu_4LM_1TM_6K_7t_tech.lef  gf180mcu_4LM_1TM_9K_7t_tech.lef  gf180mcu_6LM_1TM_9K_7t_tech.lef
scripts/: generate_lamdbalib.py  generate_mem.sh  make_blackbox.py  synthesis.py
sky130/libs/sky130io/lambda/: la_iocut.v
submodules/: update.sh
tests/: conftest.py  test_getters.py  test_lambda.py  test_lambdalib_interface.py  test_local_detect.py  test_paths.py
(+2701 files in other folders)
