[build-system]
requires = [
    "setuptools >= 61.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "lambdapdk"
authors = [{name = "Zero ASIC"}]
description = "Library of open source Process Design Kits"
readme = "README.md"
urls = {Homepage = "https://github.com/siliconcompiler/lambdapdk"}
requires-python = ">= 3.8"
license = {file = "LICENSE"}
dependencies = [
    "siliconcompiler >= 0.27.0"
]
dynamic = ['version']

[tool.setuptools.dynamic]
version = {attr = "lambdapdk.__version__"}

[project.entry-points."siliconcompiler.docs"]
linkcode = "lambdapdk:get_docs_codeurl"
libs = "lambdapdk:get_docs_libraries"
pdks = "lambdapdk:get_docs_pdks"

[tool.pytest.ini_options]
testpaths = "tests"
timeout = "180"

[project.optional-dependencies]
# Test dependencies.
test = [
    "flake8 == 7.1.2",
    "pytest == 8.3.5",
    "pytest-timeout == 2.3.1",
    "tclint == 0.5.3",
    "lambdalib == 0.3.3",
    "sc-leflib == 0.4.0",
    "Jinja2 == 3.1.6"
]

[tool.tclint]
exclude = [
    'build',
    'scripts/build',
    'dist',
    '.venv/',
    # scripts from other repos
    'lambdapdk/asap7/base/apr/example_innovus.tcl',
    'lambdapdk/sky130/base/setup/netgen/lvs_setup.tcl',
    'lambdapdk/gf180/base/setup/netgen/gf180mcuA_setup.tcl',
    'lambdapdk/gf180/base/setup/netgen/setup.tcl',
    'lambdapdk/gf180/base/setup/netgen/lvs_setup.tcl',
    'lambdapdk/gf180/base/setup/magic/gf180mcuA.tcl'
]

[tool.tclint.style]
line-length = 100
