[build-system]
requires = [
    "setuptools >= 61.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "lambdapdk"
authors = [{name = "Zero ASIC"}]
description = "Library of open source Process Design Kits"
readme = "README.md"
urls = {Homepage = "https://github.com/siliconcompiler/lambdapdk"}
requires-python = ">= 3.8"
license = {file = "LICENSE"}
dependencies = [
    "siliconcompiler >= 0.34.3",
    "lambdalib == 0.4.0-rc1"
]
dynamic = ['version']

[tool.setuptools.dynamic]
version = {attr = "lambdapdk.__version__"}

[project.entry-points."siliconcompiler.docs"]
linkcode = "lambdapdk:get_docs_codeurl"

[tool.pytest.ini_options]
testpaths = "tests"
timeout = "180"

[project.optional-dependencies]
# Test dependencies.
test = [
    "flake8 == 7.3.0",
    "pytest == 8.4.1",
    "pytest-timeout == 2.4.0",
    "tclint == 0.6.0",
    "sc-leflib == 0.4.0",
    "Jinja2 == 3.1.6"
]

[tool.tclint]
exclude = [
    'build',
    'scripts/build',
    'dist',
    '.venv/',
    # scripts from other repos
    'lambdapdk/asap7/base/apr/example_innovus.tcl',
    'lambdapdk/sky130/base/setup/netgen/lvs_setup.tcl',
    'lambdapdk/gf180/base/setup/netgen/gf180mcuA_setup.tcl',
    'lambdapdk/gf180/base/setup/netgen/setup.tcl',
    'lambdapdk/gf180/base/setup/netgen/lvs_setup.tcl',
    'lambdapdk/gf180/base/setup/magic/gf180mcuA.tcl'
]

[tool.tclint.style]
line-length = 100
